--- a/vuejs-tutorial/index.html
+++ b/vuejs-tutorial/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vuejs-tutorial</title>
+    <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css" type="text/css">
   </head>
   <body>
     <div id="app"></div>
