adicionando font-awesome ao projeto

--- a/vuejs-tutorial/index.html
+++ b/vuejs-tutorial/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>vuejs-tutorial</title>
     <link rel="stylesheet" href="./node_modules/bulma/css/bulma.css" type="text/css">
+    <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css" type="text/css">
   </head>
   <body>
     <div id="app"></div>
